# colibri_interview

./: .gitignore  Makefile  README.md  pyproject.toml
api/: main.py
scripts/: generate_db.py
src/: config.py  database.py
tests/: test_api.py
