[tool.poetry]
name = "colibri-interview"
version = "1.0.0"
description = "Tech test for Colibri"
authors = ["Eduardo Silva <15370927+emacha@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}, {include = "api"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "*"
python-dotenv = "*"
fastapi = {extras = ["all"], version = "^0.104.1"}

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"

[tool.ruff]
select = [
    "F", # Pyflakes
    "E", "W", # Pycodestyle
    "I", # isort
    "N", # pep8-naming
    "D", # pydocstyle
    "UP", # pyupgrade
    "PTH", # flake8-use-pathlib
    "PD", # pandas-vet
    "TRY", # tryceratops
]
ignore = [
    "D203", # Incompatible with D211
    "D212", # Incompatible with D213
    "TRY003", # Pointless
]

[tool.ruff.per-file-ignores]
# Import rules and missing docstring don't matter for __init__.py
"__init__.py" = ["E402", "D104", "F401"]
